Updated description of day 17, introduced AoC library, and performed some minor refactoring